@@ -27,6 +27,7 @@ glibc (2.3.5-10) unstable; urgency=low
   * Steal glibc-235-sparc-datastart.dpatch from Ubuntu.
   * Steal glibc-235-ia64-binutils.dpatch from Ubuntu.
   * Steal ia64 libm symbol patch from Ubuntu.
+  * Compile with -g2 instead of -g1 on sparc.
 
  -- Clint Adams <schizo@debian.org>  Wed, 28 Dec 2005 13:18:56 -0500
 
